Allow-api-contoso-from-example-frontend-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: allow-api-contoso
  namespace: example

spec:
  hosts:
  - api.contoso.com

  location: MESH_EXTERNAL

  ports:
  - number: 80
    name: http
    protocol: HTTP

  resolution: DNS
