allow-api-example-from-frontend-contoso-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: allow-api-example
  namespace: contoso

spec:
  hosts:
  - api.example.com

  location: MESH_EXTERNAL

  ports:
  - number: 80
    name: http
    protocol: HTTP

  resolution: DNS
