example-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-frontend-ingress
  namespace: example

spec:
  ingressClassName: azure-application-gateway

  rules:
  - host: example.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: example-frontend-svc

            port:
              number: 80
